<resources>
    <string name="app_name">InnovaMotion</string>
    <string name="app_name_short">IMotion</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bt_start_to_connect_text">Conectare</string>
    <string name="bt_start_to_enable_text">Porneste BT</string>
    <string name="bt_enabling_text">Pornire BT…</string>
    <string name="bt_connecting_text">Conectare…</string>
    <string name="bt_scanning_text">Scanare…</string>
    <string name="bt_stopped_scan_text">Scanare</string>
    <string name="bluetooth_status">Bluetooth status</string>
    <string name="bt_status_disconnected">Disconnected</string>
    <string name="bt_status_connected">Connected</string>
    <string name="bt_status_scanning">Scanning…</string>
    <string name="bt_status_connecting">Connecting…</string>
    <string name="bt_no_device">No device connected</string>
    <string name="bt_connected_to">Connected to: %1$s</string>
    <string name="bt_scan_for_devices">Scan for Devices</string>
    <string name="bt_disconnect">Disconnect</string>
    <string name="bt_available_devices">Available Devices</string>
    <string name="bt_stop_scan">Stop Scan</string>
    <string name="posture_unused_footwear_msg">Papucii il asteapta pe %1$s …</string>
    <string name="posture_unused_footwear_risk">Unknown</string>
    <string name="posture_standing_msg">%1$s sta in picioare</string>
    <string name="posture_standing_risk">Risc mediu</string>
    <string name="posture_walking_msg">%1$s merge …</string>
    <string name="posture_walking_risk">Risc mediu</string>
    <string name="posture_sitting_msg">%1$s sta pe scaun</string>
    <string name="posture_sitting_risk">Risc mic</string>
    <string name="posture_falling_msg">%1$s a cazut!!!</string>
    <string name="posture_falling_risk">Risc mare!</string>
    <string name="posture_unknown_msg">Unknown posture</string>
    <string name="posture_unknown_risk">Unknown</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in_as_placeholder">Signed in</string>
    <string name="aggregator_email_hint">Aggregator Gmail address</string>
    <string name="add_aggregator">Add aggregator account</string>
    <string name="invalid_email">Please enter a valid Gmail address</string>
    <string name="aggregator_added">Aggregator account added</string>
    <string name="aggregator_failed">Failed to add aggregator account</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="role_supervisor">Supervisor</string>
    <string name="role_aggregator">Aggregator</string>
    <string name="proceed">Continue</string>
    <string name="role_required">Please select an account type</string>
    <string name="aggregator_email_required">Please enter the aggregator Gmail address</string>
    <string name="aggregator_description">Collects posture data from monitored sensors</string>
    <string name="role_set_success">Account type saved</string>
    <string name="loading_preferences">Loading your preferences...</string>
    <string name="preferences_load_failed">Could not load preferences, using defaults</string>
    <string name="ch_bt_service_name">Bluetooth Service</string>
    <string name="ch_bt_service_desc">Required while Bluetooth communication service is running</string>
    <string name="ch_fall_alerts_name">Fall Alerts</string>
    <string name="ch_fall_alerts_desc">Critical posture alerts (falls)</string>
    <string name="notif_bt_title_init">InnovaMotion Service</string>
    <string name="notif_bt_text_starting">Starting…</string>
    <string name="notif_bt_title_connected">%1$s Connected</string>
    <string name="notif_bt_text_connected">Communication is ongoing.</string>
    <string name="notif_bt_title_disconnected">Device disconnected</string>
    <string name="notif_bt_text_reconnecting">Trying to reconnect…</string>
    <string name="notif_fall_title">Fall Detected: %1$s</string>
    <string name="notif_fall_text_generic">may have fallen. Check immediately.</string>
    <string name="aggregator_menu_title">Aggregator Menu</string>
    <string name="btn_bluetooth_settings">Bluetooth Settings</string>
    <string name="btn_dashboard">Dashboard</string>
    <string name="dashboard_no_data_hint">No data available yet</string>
    <string name="tab_message_log">Messages</string>
    <string name="tab_live_posture">Posture</string>
    <string name="filter_label">Filter:</string>
    <string name="filter_all_sensors">All Sensors</string>
    <string name="auto_scroll_label">Auto-scroll</string>
    <string name="no_messages">No messages yet</string>
    <string name="posture_icon_desc">Posture icon</string>
    <string name="live_posture_placeholder">Live Posture Viewer\n\nComing in Task 6</string>
    <string name="select_person">Person:</string>
    <string name="risk_level">Risk:</string>
    <string name="last_update">Last update: %1$s</string>
    <string name="no_data_available">No data available</string>
    <string name="unknown_person">Unknown</string>
    <string name="no_persons_monitored">No persons being monitored</string>
    <string name="btn_monitorizare">Monitorizare</string>
    <string name="btn_statistica">Statistica</string>
    <string name="btn_activitati">Activitati</string>
    <string name="btn_consum_energetic">Consum energetic</string>
    <string name="statistics_title">Statistica</string>
    <string name="statistics_title_for_person">Statistica: %1$s</string>
    <string name="activities_title">Activitati</string>
    <string name="activities_title_for_person">Activitati: %1$s</string>
    <string name="energy_title">Consum energetic</string>
    <string name="energy_title_for_person">Consum energetic: %1$s</string>
    <string name="manage_person_names">Manage Names</string>
    <string name="no_monitored_persons">No monitored persons</string>
    <string name="role_selection_title">Select Mode</string>
    <string name="supervisor_dashboard">Supervisor Dashboard</string>
    <string name="no_monitored_persons_supervisor">No persons being monitored.\nWaiting for data from aggregators.</string>
    <string name="no_monitored_persons_aggregator">No sensor data yet.\nConnect a sensor via Bluetooth Settings.</string>
    <string name="alert_badge_desc">Alert indicator</string>
    <string name="edit_person_name">Edit Name</string>
    <string name="sensor_id_label">Sensor ID</string>
    <string name="display_name_hint">Display Name</string>
    <string name="select_scenario">Select Test Scenario</string>
    <string name="run_scenario">Run Scenario</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="db_stats">Database: %1$d messages, %2$d sensors</string>
    <string name="scenario_basic_multi_person_title">Basic Multi-Person</string>
    <string name="scenario_basic_multi_person_desc">3 sensors with varied postures (10 readings each)</string>
    <string name="scenario_fall_detection_title">Fall Detection</string>
    <string name="scenario_fall_detection_desc">1 sensor with fall posture - triggers alerts</string>
    <string name="scenario_stale_data_title">Stale Data</string>
    <string name="scenario_stale_data_desc">3 sensors with old timestamps - tests yellow status</string>
    <string name="scenario_high_volume_title">High Volume</string>
    <string name="scenario_high_volume_desc">10 sensors, 50 readings each - stress test</string>
    <string name="scenario_name_resolution_title">Name Resolution</string>
    <string name="scenario_name_resolution_desc">5 sensors with assigned display names</string>
    <string name="scenario_mixed_states_title">Mixed States</string>
    <string name="scenario_mixed_states_desc">Active + stale + alert sensors - tests dashboard</string>
    <string name="sync_to_firestore">Also sync to Firestore</string>
    <string name="supervisor_email_hint">Supervisor Email</string>
    <string name="supervisor_not_assigned">No supervisor assigned</string>
    <string name="assign_supervisor">Assign Supervisor</string>
</resources>